# restaurant_backend

./: .env  .env.prod  .env.prod.example  .gitignore  DJANGO_ADMIN_SETUP.md  deploy.sh  manage.py  nginx.conf  populate_db.py  pyproject.toml  requirements-aws.txt  requirements-prod.txt  requirements.txt  restaurant_backend.service  setup.py  test_api.py  test_email.py  update_categories.py
apps/chatbot/: apps.py  serializers.py  urls.py  views.py
apps/contact/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/delivery/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/invoices/: apps.py  urls.py  utils.py  views.py
apps/menu/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/orders/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/reviews/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
chatbot/: models.py  serializers.py  services.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py  0002_initial.py
menu/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_initial.py
notifications/: services.py  tasks.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
payments/: serializers.py  services.py  urls.py  views.py
restaurant_api/: __init__.py  celery.py  settings.py  swagger.py  urls.py
restaurant_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
restaurant_backend/: admin_views.py  settings.py  settings_prod.py  settings_prod_fixed.py  simple_admin.py  urls.py  wsgi.py
search/: services.py  tasks.py  urls.py  views.py
templates/emails/: order_confirmation.html  order_confirmation_email.html  order_delivered.html  order_out_for_delivery.html  (+5 more)
users/: models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
